# bill_analysis

./: .gitignore  README.md  pyproject.toml
docs/: USAGE.md
src/bill_analysis/: __init__.py  create_sample_data.py  main.py
src/bill_analysis/analyzers/: __init__.py  statistics.py
src/bill_analysis/parsers/: __init__.py  alipay.py  base.py  ccb.py  wechat.py
src/bill_analysis/processors/: __init__.py  classifier.py  cleaner.py  dedup.py
src/bill_analysis/reports/: __init__.py  generator.py  visualizer.py
